apps/base/haste-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haste-server
  namespace: haste-server
  labels:
    app: haste-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haste-server
  template:
    metadata:
      labels:
        app: haste-server
    spec:
      containers:
        - name: haste-server
          image: bacherik/haste-server:latest
          ports:
            - containerPort: 7777
          volumeMounts:
            - name: haste-data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: haste-data
          persistentVolumeClaim:
            claimName: haste-data-pvc
