apps/base/haste-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haste-server
  namespace: haste-server
spec:
  selector:
    app: haste-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7777
